// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > Copy functionality > should display tooltip on hover and copy text on click 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copied"
      >
        <button
          class="btn btn-sm btn-ghost btn-square btn-disabled"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopiedIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 2 C 14.742188 2 13.847656 2.890625 13.40625 4 L 5 4 L 5 29 L 27 29 L 27 4 L 18.59375 4 C 18.152344 2.890625 17.257813 2 16 2 Z M 16 4 C 16.554688 4 17 4.445313 17 5 L 17 6 L 20 6 L 20 8 L 12 8 L 12 6 L 15 6 L 15 5 C 15 4.445313 15.445313 4 16 4 Z M 7 6 L 10 6 L 10 10 L 22 10 L 22 6 L 25 6 L 25 27 L 7 27 Z M 21.28125 13.28125 L 15 19.5625 L 11.71875 16.28125 L 10.28125 17.71875 L 14.28125 21.71875 L 15 22.40625 L 15.71875 21.71875 L 22.71875 14.71875 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        HELLO WORLD
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > clears the textarea when 'Reset' button is clicked 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      />
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > transforms the textarea value to PascalCase when 'PascalCase' button is clicked 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        ThisIsAMockSentenceWithTenWordsExactly
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > transforms the textarea value to camel case when 'camelCase' button is clicked 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        thisIsAMockSentenceWithTenWordsExactly
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > transforms the textarea value to lower case when 'lower case' button is clicked 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        hello world
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > transforms the textarea value to snake case when 'snake_case' button is clicked 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        this_is_a_mock_sentence_with_ten_words_exactly
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > transforms the textarea value to upper case when 'UPPER CASE' button is clicked 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        HELLO WORLD
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App > updates the textarea value when typing 1`] = `
<DocumentFragment>
  <div
    class="p-8"
  >
    <h1
      class="text-3xl font-extrabold"
    >
      Case Converter
    </h1>
    <div
      class="flex mt-10 justify-center relative"
    >
      <div
        class="absolute tooltip tooltip-left right-3 top-2 tooltip-accent"
        data-tip="copy"
      >
        <button
          class="btn btn-sm btn-ghost btn-square"
        >
          <svg
            class="h-5 w-5 fill-current cursor-pointer"
            data-testid="CopyIcon"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 16 3 C 14.742188 3 13.847656 3.890625 13.40625 5 L 6 5 L 6 28 L 26 28 L 26 5 L 18.59375 5 C 18.152344 3.890625 17.257813 3 16 3 Z M 16 5 C 16.554688 5 17 5.445313 17 6 L 17 7 L 20 7 L 20 9 L 12 9 L 12 7 L 15 7 L 15 6 C 15 5.445313 15.445313 5 16 5 Z M 8 7 L 10 7 L 10 11 L 22 11 L 22 7 L 24 7 L 24 26 L 8 26 Z"
            />
          </svg>
        </button>
      </div>
      <textarea
        class="textarea textarea-lg w-full max-w-5xl border-zinc-400"
        rows="6"
      >
        hello world
      </textarea>
    </div>
    <div
      class="flex justify-between mt-3 ml-4 mr-4"
    >
      <div
        class="join gap-3"
      >
        <button
          class="btn btn-neutral normal-case"
        >
          UPPER CASE
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          lower case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          snake_case
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          PascalCase
        </button>
        <button
          class="btn btn-neutral normal-case"
        >
          camelCase
        </button>
      </div>
      <button
        class="btn"
      >
        Reset
      </button>
    </div>
  </div>
</DocumentFragment>
`;
